<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <Button
        android:id="@+id/btn_qr_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/key_height"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0.1dp"
        android:background="@drawable/qr_pay_selector"
        android:text="扫码支付"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gl_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_qr_pay"
        app:columnCount="3"
        app:orientation="horizontal"
        app:rowCount="5">

        <Button
            style="@style/key_style"
            android:enabled="false"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/key_style"
            android:gravity="center"
            android:text="@string/str_key_clear"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_seven"
            style="@style/key_style"
            android:text="@string/str_key_seven"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_eight"
            style="@style/key_style"
            android:text="@string/str_key_eight"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowSpan="1" />

        <Button
            android:id="@+id/btn_nine"
            style="@style/key_style"
            android:text="@string/str_key_nine"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_four"
            style="@style/key_style"
            android:text="@string/str_key_four"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_five"
            style="@style/key_style"
            android:text="@string/str_key_five"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_six"
            style="@style/key_style"
            android:text="@string/str_key_six"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_one"
            style="@style/key_style"
            android:text="@string/str_key_one"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_two"
            style="@style/key_style"
            android:text="@string/str_key_two"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_three"
            style="@style/key_style"
            android:text="@string/str_key_three"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />


        <Button
            android:id="@+id/btn_zero"
            style="@style/key_style"
            android:text="@string/str_key_zero"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/btn_del"
            style="@style/key_style"
            android:text="@string/str_key_del"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

    </android.support.v7.widget.GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/gl_keyboard"
        android:layout_marginBottom="0.1dp"

        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="end|center_vertical" />
    </FrameLayout>

</RelativeLayout>